# django_queryset_annotations

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
queryset_annotations/: __init__.py  tools.py
queryset_annotations/base/: __init__.py  abstract_annotation.py  context.py  subquery_annotation.py
queryset_annotations/drf/views/: mixins.py
queryset_annotations/mixins/: __init__.py  dependency_annotation.py
queryset_annotations/proxy/: __init__.py  manager.py  meta.py  model.py
