[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "queryset_annotations"
version = "1.1.0"
description = "Django Smart Queryset Annotations"
readme = "README.md"
authors = [
    { name = "Sergei (Gefest) Romanchuk" }
]
license = { file = "LICENSE" }
urls = { homepage = "https://github.com/GefMar/django_queryset_annotations" }
classifiers = [
    "License :: OSI Approved :: MIT License"
]

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.flakeheaven]
baseline = "./.flake_baseline"
max_line_length = 120
format = "grouped"
show_source = true
statistics = true
inline_quotes = "double"

[tool.mypy]
ignore_missing_imports = true
implicit_optional = true


[tool.flakeheaven.plugins]
"*" = [
    "+*", # enable all plugins
    "-I*", # disable isort
    "-DAR*", # disable docstring arguments linting by darglint
    # ignore errors:
    "-D100", #  Docstring in public module
    "-D104", #  Docstring in public package
    "-D106", #  Docstring in public nested class
    "-D202", #  No blank lines allowed after function docstring (conflicts with black)
    "-D401", #  First line should be in imperative mood
    "-D412", #  No blank lines allowed between a section header and its content
    "-W503", #  line break before binary operator
    "-WPS110", #  Forbid common names like data or items
    "-WPS201", #  Found module with too many imports
    "-WPS226", #  Found string literal over-use
    "-WPS300", # Found local folder import
    "-WPS305", #  Forbid f-strings
    "-WPS306", #  Inherit from object
    "-WPS430", #  Found nested function
    "-C819", # Trailing comma prohibited
    "-D103", # Missing docstring in public function
    "-WPS410", # Found wrong metadata variable
    "-D101", # Missing docstring in public class
    "-D102", # Missing docstring in public method
    "-D105", # Missing docstring in magic method
    "-WPS112", # Found private name pattern
    "-WPS210", # Found too many local variables
    "-WPS601", # Found shadowed class attribute
    "-WPS602", # Found using `@staticmethod`
    "-C812", # missing trailing comma
    "-D400",
    "-WPS603", # Found using restricted magic method: __del__
    "-WPS221", # Found line with high Jones Complexity
    "-WPS232", # Found module cognitive complexity that is too high
    "-PT009",
    "-RST201",
    "-D402",
    "-D205",
    "-RST301",
    "-RST206",
    "-WPS202",
    "-WPS605", # Enabled use staticmethods
    "-D107", # Missing docstring in __init__
    "-WPS529", # Found implicit `.get()` dict usage
    "-WPS237", # Found a too complex `f` string
    "-WPS326", # Found implicit string concatenation
    "-WPS615", # Found unpythonic getter or setter
    "-WPS421", # Found wrong function call https://flake8.codes/WPS421/
    "-WPS337", # Found multiline conditions
    "-E203",
    "-WPS332"

]

[tool.flakeheaven.exceptions."*/__init__.py"]
"*" = [
    "-F401", # imported but unused
    "-F403", # used; unable to detect undefined names
    "-WPS440", # Found block variables overlap: *
    "-WPS347",
    "-WPS412",
]
[tool.flakeheaven.exceptions."*/meta.py"]
"*" = [
    "-WPS608",
    "-WPS613",
    "-N804",
]

[tool.flakeheaven.exceptions."*.md"]
"*" = [
    "-*",
]
